overflow fixed

--- a/srcs/requirements/front/src/components/ChatBox/ChatBox.scss
+++ b/srcs/requirements/front/src/components/ChatBox/ChatBox.scss
@@ -32,6 +32,7 @@
 }
 
 .send-frame {
+	border-width: 1px;
 	width: 100%;
 	height: 15%;
 	display: flex;
