--- a/srcs/requirements/front/src/components/SideBar/SideBar.scss
+++ b/srcs/requirements/front/src/components/SideBar/SideBar.scss
@@ -26,11 +26,11 @@
 
 .menu-frame {
 	height: 100px;
-	width: 100%;
 	display: flex;
 }
 
 .text-side {
+	font-size: 24px;
 	text-align: center;
 	top: 0;
 	bottom: 0;
